# onebit-llm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_PYTHON.md  __A Foundational Framework for a High-Performance 1-Bit LLM Inference Library in Rust__.md  config.bitnet.json  config.json  config_0_3B_stack.json  config_0_7B_stack.json  config_1_3B_stack.json  config_8B_gcp.json  config_wikitext.json  config_wikitext2_production.json  pyproject.toml  requirements-cuda.txt  search_log.txt  search_result.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  data.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: activation.rs  attention.rs  lib.rs  linear.rs  model.rs  norm.rs  quantize.rs
crates/inference/: Cargo.toml
crates/inference/src/: export.rs  lib.rs  runtime.rs  sampler.rs
crates/search/: Cargo.toml
crates/search/src/: coordinator.rs  evaluator.rs  expander.rs  graph.rs  lib.rs  types.rs
crates/train/: Cargo.toml
crates/train/examples/: train_wikitext.rs
crates/train/src/: lib.rs  scheduler.rs  trainer.rs
docs/: ARCHITECTURE.md  ARXIV_2504.17033_REVIEW.md  IMPLEMENTATION.md  MASTER_PLAN.md  REFERENCE.md  SANDWICH_RULE.md  SANITY_OVERFIT.md  SETUP.md  WIKITEXT2_RUN.md
onebit_llm/: __init__.py  attention.py  config.py  data.py  linear.py  model.py  norm.py  quantize.py  stack_stream.py  train.py
scripts/: download_wikitext.py  generate_stack_manifest.py  random_search.py  run_wikitext2.sh  stack_stream.py  stack_stream_train.py
src/: binary.rs  config.rs  data.rs  lib.rs  model.rs
src/search/: coordinator.rs  evaluator.rs  expander.rs  graph.rs  mod.rs  types.rs  utils.rs
