[package]
name = "onebit-llm"
version = "0.1.0"
edition = "2021"
description = "1-bit LLM architecture in Rust with binary/XNOR-style layers"
authors = ["OneBit-LLM"]
license = "MIT"

[dependencies]
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
tokenizers = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "export"
path = "src/bin/export.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"
