[package]
name = "onebit-llm"
version = "0.1.0"
edition = "2021"
description = "1-bit LLM architecture in Rust with binary/XNOR-style layers"
authors = ["OneBit-LLM"]
license = "MIT"

[dependencies]
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
tokenizers = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
indexmap = "2.0"
rayon = "1.8"
parking_lot = "0.12"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
lru = "0.12"

[lib]
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "export"
path = "src/bin/export.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[[bin]]
name = "export_quantized"
path = "src/bin/export_quantized.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"
