[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/common",
    "crates/train",
    "crates/search",
    "crates/inference",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Ternary-Core Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/onebit-llm/ternary-core"
description = "Ternary-Core: 1.58-bit LLM framework in Rust — mixed-precision (Sandwich Rule), training, search, inference"

# ── Shared dependency versions ──────────────────────────────────────────────
# Every crate in the workspace should reference these via:
#   candle-core = { workspace = true }
#
[workspace.dependencies]
# Core tensor engine (pure Rust, WASM-compatible baseline)
candle-core  = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn    = { git = "https://github.com/huggingface/candle.git" }
tokenizers   = "0.21"

# Serialization
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
safetensors  = "0.4"

# Error handling
anyhow       = "1.0"

# CLI
clap         = { version = "4.5", features = ["derive"] }

# Parallelism
rayon        = "1.10"
tokio        = { version = "1", features = ["full"] }

# Data
memmap2      = "0.9"

# Graphs (search)
petgraph     = "0.6"
indexmap      = "2.0"

# Concurrency primitives
parking_lot  = "0.12"

# Logging & observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif    = "0.17"

# RNG
rand         = "0.8"

# Caching
lru          = "0.16.3"

# ── Feature flags (opt-in acceleration) ─────────────────────────────────────
[workspace.metadata.features-doc]
# Consumers of individual crates can enable:
#   cargo build --features cuda     → CUDA acceleration via candle
#   cargo build --features metal    → Metal acceleration on Apple Silicon
#   (default)                       → Pure CPU / WASM compatible

# ── Workspace-level profiles ────────────────────────────────────────────────
[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
strip        = "symbols"

[profile.bench]
inherits = "release"
debug    = true
