[package]
name = "onebit-cli"
description = "Unified CLI for training, inference, and quantisation search for OneBit-LLM"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow              = { workspace = true }
clap                = { workspace = true }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
rayon               = { workspace = true }
tokio               = { workspace = true }
tracing-subscriber  = { workspace = true }
ternary-common      = { path = "../common" }
ternary-core        = { path = "../core" }
ternary-train       = { path = "../train" }
ternary-infer       = { path = "../inference" }
ternary-search      = { path = "../search" }

[[bin]]
name = "onebit"
path = "src/main.rs"

[features]
default = []
cuda    = ["ternary-core/cuda", "ternary-train/cuda", "ternary-infer/cuda", "ternary-search/cuda", "candle-core/cuda"]
metal   = ["ternary-core/metal", "ternary-train/metal", "ternary-infer/metal", "ternary-search/metal", "candle-core/metal"]

