[package]
name = "ternary-core"
description = "The mathematical engine: BitLinear, RMSNorm, SwiGLU, quantization (Binary & Ternary) with STE"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ternary-common      = { path = "../common" }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
parking_lot         = { workspace = true }
tracing             = { workspace = true }

[features]
default = []
cuda    = ["candle-core/cuda", "candle-nn/cuda"]
metal   = ["candle-core/metal", "candle-nn/metal"]
