[package]
name = "ternary-infer"
description = "Lightweight inference runtime: KV-cache, Top-P/Temperature decoding, .1bit export"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ternary-core        = { path = "../core" }
ternary-common      = { path = "../common" }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
tokenizers          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
safetensors         = { workspace = true }
anyhow              = { workspace = true }
clap                = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
rand                = { workspace = true }

[features]
default = []
cuda    = ["ternary-core/cuda", "candle-core/cuda", "candle-nn/cuda"]
metal   = ["ternary-core/metal", "candle-core/metal", "candle-nn/metal"]

[[bin]]
name = "onebit-chat"
path = "src/bin/chat.rs"

[[bin]]
name = "onebit-export"
path = "src/bin/export.rs"

[[bin]]
name = "onebit-test-generate"
path = "src/bin/test_generate.rs"
