[package]
name = "ternary-search"
description = "Expander-decomposition quantization search: find optimal Binary/Ternary bit-width maps"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ternary-core        = { path = "../core" }
ternary-common      = { path = "../common" }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
tokenizers          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
clap                = { workspace = true }
rayon               = { workspace = true }
tokio               = { workspace = true }
petgraph            = { workspace = true }
indexmap             = { workspace = true }
parking_lot         = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
indicatif           = { workspace = true }
rand                = { workspace = true }
lru                 = { workspace = true }

[features]
default = []
cuda    = ["ternary-core/cuda", "candle-core/cuda", "candle-nn/cuda"]
metal   = ["ternary-core/metal", "candle-core/metal", "candle-nn/metal"]

[[bin]]
name = "onebit-search"
path = "src/bin/search.rs"

[[bin]]
name = "onebit-eval-config"
path = "src/bin/eval_config.rs"
