[package]
name = "ternary-train"
description = "Training engine: AdamW with latent clipping, cosine annealing, soft→hard quantization scheduling"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ternary-core        = { path = "../core" }
ternary-common      = { path = "../common" }
candle-core         = { workspace = true }
candle-nn           = { workspace = true }
tokenizers          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
clap                = { workspace = true }
rayon               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
indicatif           = { workspace = true }

[features]
default = []
cuda    = ["ternary-core/cuda", "candle-core/cuda", "candle-nn/cuda"]
metal   = ["ternary-core/metal", "candle-core/metal", "candle-nn/metal"]

[[bin]]
name = "onebit-train"
path = "src/bin/train.rs"

[[bin]]
name = "onebit-tokenize"
path = "src/bin/tokenize.rs"
